--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"@apollo/react-hooks": "^3.0.0",
 		"apollo-boost": "^0.4.3",
 		"axios": "^0.19.0",
+		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"express-graphql": "^0.9.0",
 		"graphql": "^14.4.2",
