--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"passport": "^0.4.0",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
+		"react-router": "^5.0.1",
 		"react-scripts": "3.0.1"
 	},
 	"scripts": {
