--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"@apollo/react-hooks": "^3.0.0",
 		"apollo-boost": "^0.4.3",
 		"axios": "^0.19.0",
+		"bootstrap": "^4.4.1",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"express-graphql": "^0.9.0",
@@ -14,6 +15,7 @@
 		"mongoose": "^5.6.9",
 		"passport": "^0.4.0",
 		"react": "^16.8.6",
+		"react-bootstrap": "^1.0.0-beta.16",
 		"react-dom": "^16.8.6",
 		"react-router": "^5.0.1",
 		"react-router-dom": "^5.0.1",
