--- a/package.json
+++ b/package.json
@@ -1,48 +1,49 @@
 {
-	"name": "mern-song-lyrics",
-	"version": "0.1.0",
-	"private": true,
-	"dependencies": {
-		"@apollo/react-hooks": "^3.0.0",
-		"apollo-boost": "^0.4.3",
-		"axios": "^0.19.0",
-		"bootstrap": "^4.4.1",
-		"cors": "^2.8.5",
-		"express": "^4.17.1",
-		"express-graphql": "^0.9.0",
-		"graphql": "^14.4.2",
-		"lodash": "^4.17.15",
-		"mongoose": "^5.6.9",
-		"passport": "^0.4.0",
-		"react": "^16.8.6",
-		"react-bootstrap": "^1.0.0-beta.16",
-		"react-dom": "^16.8.6",
-		"react-router": "^5.0.1",
-		"react-router-dom": "^5.0.1",
-		"react-scripts": "3.0.1"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"server": "cd server && nodemon server",
-		"client": "npm start",
-		"dev": "concurrently \"npm run server\" \"npm run client\"",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
-	},
-	"eslintConfig": {
-		"extends": "react-app"
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	}
+  "name": "mern-song-lyrics",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@apollo/react-hooks": "^3.0.0",
+    "apollo-boost": "^0.4.3",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.4.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
+    "graphql": "^14.4.2",
+    "lodash": "^4.17.15",
+    "mongoose": "^5.6.9",
+    "passport": "^0.4.0",
+    "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-dom": "^16.8.6",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "server": "cd server && nodemon server",
+    "client": "npm start",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && npm run build",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
