--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy": "http://localhost:4000",
+  "proxy": "https://mern-song-creator.herokuapp.com/",
   "browserslist": {
     "production": [
       ">0.2%",
