--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.0.0",
     "apollo-boost": "^0.4.3",
+    "apollo-link-http": "^1.5.16",
     "apollo-server-express": "^2.9.14",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
