--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-scripts": "3.0.1"
   },
   "scripts": {
-    "start": "cd server && node server",
+    "start": "react-scripts start && cd server && node server",
     "server": "cd server && nodemon server",
     "client": "npm start",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
